--- a/views/order/index.ejs
+++ b/views/order/index.ejs
@@ -3,4 +3,47 @@
 <h1>FoodDeliverEat</h1>
 <p>Order now!</p>
 
+<!-- <div class="row text-center" style="display:flex; flex-wrap: wrap;">
+    <% foods.forEach(function(food){ %>
+        <div class="col-md-3 col-sm-6">
+            <div class="thumbnail">
+                <img src="<%= food.image %>">
+                <div class="caption">
+                    <h4><%= food.name %></h4>
+                </div>
+                <p>
+                    <a href="" class="btn btn-primary">More Info</a>
+                </p>
+            </div>
+        </div>
+    <% }); %>
+</div> -->
+
+<div class="row container-fluid" style="display:flex; flex-wrap: wrap;">
+    <% foods.forEach(function(food){ %>
+        <div class="col-md-3 col-sm-6">
+            <div class="thumbnail" id="container">
+                <div  class="text-right;" style="float: right;">
+                    <img src="<%= food.image %>">
+                    <!-- <p> test </p> -->
+                </div>
+                <h4><%= food.name %></h6>
+                <p><%= food.description %></p>
+                <p>$<%= food.price %>.00</p>
+            </div>
+        </div>
+    <% }); %>
+</div>
+
+
 <% include ../partials/footer %>
+
+<!-- Wrap entire item in anchor tag -->
+<!--
+div
+Header: foodname
+p-tag: description x characters
+photo on the right
+
+
+ -->
