--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,5 +4,6 @@
         <meta charset="utf-8">
         <title>FoodDeliverEat</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/stylesheets/main.css">
     </head>
     <body>
