--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,15 +24,28 @@
                   <ul class="nav navbar-nav">
                   </ul>
                   <ul class="nav navbar-nav navbar-right">
-                      <!-- if(!currentUser){  -->
+                      <% if(!currentUser){ %>
                           <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/login">Login</a></li>
                           <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/register">Sign Up</a></li>
-                      <!--  } else {  -->
-
+                      <% } else { %>
+                          <li><a><%= currentUser.username %></a></li>
                           <li><a href="/logout">Logout</a></li>
-                      <!--  }  -->
-                      <li><a href="/cart"><i class="fa fa-shopping-bag"></i></a></li>
+                      <% } %>
                   </ul>
                 </div>
             </div>
         </nav>
+        
+        <div class="container">
+        <% if(success && success.length > 0){ %>
+            <div class="alert alert-success" role="alert">
+                <%= success %>
+            </div>
+        <% } %>
+
+        <% if(error && error.length > 0){ %>
+            <div class="alert alert-danger" role="alert">
+                <%= error %>
+            </div>
+        <% } %>
+        </div>
