--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,13 +5,20 @@
     <div style="width: 30%; margin: 25px auto;">
         <form action="/register" method="post">
             <div class="form-group">
-                <input class="form-control" type="text" name="username" placeholder="Username">
+                <input class="form-control" type="text" name="email" placeholder="name@example.com">
             </div>
             <div class="form-group">
                 <input class="form-control" type="password" name="password" placeholder="Password">
             </div>
             <div class="form-group">
-                <button class="btn btn-lg btn-primary btn-block">Sign Up!</button>
+                <input class="form-control" type="text" name="first-name" placeholder="First Name">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="text" name="last-name" placeholder="Last Name">
+            </div>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+            <div class="form-group">
+                <button type="submit" class="btn btn-lg btn-primary btn-block">Sign Up!</button>
             </div>
         </form>
         <a href="/order">Go Back</a>
