--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
     <div style="width: 30%; margin: 25px auto;">
         <form action="/login" method="post">
             <div class="form-group">
-                <input class="form-control" type="text" name="username" placeholder="Username">
+                <input class="form-control" type="text" name="email" placeholder="name@example.com">
             </div>
             <div class="form-group">
                 <input class="form-control" type="password" name="password" placeholder="Password">
