--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,6 +10,7 @@
             <div class="form-group">
                 <input class="form-control" type="password" name="password" placeholder="Password">
             </div>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-group">
                 <button class="btn btn-lg btn-primary btn-block">Login</button>
             </div>
