--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,21 +21,27 @@
                     <a class="navbar-brand" href="/">FoodDeliverEat</a>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
-                  <ul class="nav navbar-nav">
-                  </ul>
-                  <ul class="nav navbar-nav navbar-right">
-                      <% if(!currentUser){ %>
-                          <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/login">Login</a></li>
-                          <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/register">Sign Up</a></li>
-                      <% } else { %>
-                          <li><a><%= currentUser.username %></a></li>
-                          <li><a href="/logout">Logout</a></li>
-                      <% } %>
-                  </ul>
+                    <ul class="nav navbar-nav">
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <% if(!currentUser){ %>
+                            <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/login">Login</a></li>
+                            <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/register">Sign Up</a></li>
+                        <% } else { %>
+                            <li><a><%= currentUser.username %></a></li>
+                            <li><a href="/logout">Logout</a></li>
+                        <% } %>
+                        <li>
+                            <a href="/order/checkout">
+                                <i class="fa fa-shopping-bag" aria-hidden="true"></i>
+                                <span class="badge"><!-- session.cart.totalQty --></span>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
-        
+
         <div class="container">
         <% if(success && success.length > 0){ %>
             <div class="alert alert-success" role="alert">
