--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -11,10 +11,13 @@
                 <input class="form-control" type="password" name="password" placeholder="Password">
             </div>
             <div class="form-group">
-                <input class="form-control" type="text" name="first-name" placeholder="First Name">
+                <input class="form-control" type="text" name="firstName" placeholder="First Name">
             </div>
             <div class="form-group">
-                <input class="form-control" type="text" name="last-name" placeholder="Last Name">
+                <input class="form-control" type="text" name="lastName" placeholder="Last Name">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="text" name="phoneNumber" placeholder="403-000-0000">
             </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-group">
