Added navbar dropdown and user route refactor

--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,4 +1,4 @@
-<% include ./partials/header %>
+<% include ../partials/header %>
 
 <div class="row">
     <h1 style="text-align: center">Sign Up</h1>
@@ -28,4 +28,4 @@
     </div>
 </div>
 
-<% include ./partials/footer %>
+<% include ../partials/footer %>
