--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
     </head>
     <body>
         <nav class="navbar navbar-default">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                       <span class="sr-only">Toggle navigation</span>
@@ -24,17 +24,24 @@
                     <ul class="nav navbar-nav">
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <% if(!currentUser){ %>
-                            <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/login">Login</a></li>
-                            <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/register">Sign Up</a></li>
-                        <% } else { %>
-                            <li><a><%= currentUser.username %></a></li>
-                            <li><a href="/logout">Logout</a></li>
-                        <% } %>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> Account <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <% if(!currentUser){ %>
+                                    <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/login">Login</a></li>
+                                    <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/register">Sign Up</a></li>
+                                <% } else { %>
+                                    <li><a><%= currentUser.username %></a></li>
+                                    <li><a href="/logout">Logout</a></li>
+                                <% } %>
+                            </ul>
+                        </li>
                         <li>
                             <a href="/order/checkout">
                                 <i class="fa fa-shopping-bag" aria-hidden="true"></i>
-                                <span class="badge"><!-- session.cart.totalQty --></span>
+                                <% if(session.cart){ %>
+                                    <span class="badge"><%= session.cart.totalQty %></span>
+                                <% } %>
                             </a>
                         </li>
                     </ul>
