--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,11 +28,11 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> Account <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <% if(!currentUser){ %>
-                                    <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/login">Login</a></li>
-                                    <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/register">Sign Up</a></li>
+                                    <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/user/login">Login</a></li>
+                                    <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/user/register">Sign Up</a></li>
                                 <% } else { %>
                                     <li><a><%= currentUser.username %></a></li>
-                                    <li><a href="/logout">Logout</a></li>
+                                    <li><a href="/user/logout">Logout</a></li>
                                 <% } %>
                             </ul>
                         </li>
