--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,10 +3,13 @@
 <div class="row">
     <h1 style="text-align: center">Login</h1>
     <div style="width: 30%; margin: 25px auto;">
-        <form action="/login" method="post">
+        <form action="/user/login" method="post">
             <div class="form-group">
-                <input class="form-control" type="text" name="email" placeholder="name@example.com">
+                <input class="form-control" type="text" name="username" placeholder="Username">
             </div>
+            <!-- <div class="form-group">
+                <input class="form-control" type="text" name="email" placeholder="name@example.com">
+            </div> -->
             <div class="form-group">
                 <input class="form-control" type="password" name="password" placeholder="Password">
             </div>
