--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -3,7 +3,10 @@
 <div class="row">
     <h1 style="text-align: center">Sign Up</h1>
     <div style="width: 30%; margin: 25px auto;">
-        <form action="/register" method="post">
+        <form action="/user/register" method="post">
+            <div class="form-group">
+                <input class="form-control" type="text" name="username" placeholder="Username">
+            </div>
             <div class="form-group">
                 <input class="form-control" type="text" name="email" placeholder="name@example.com">
             </div>
