--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -27,7 +27,7 @@
                 <button type="submit" class="btn btn-lg btn-primary btn-block">Sign Up!</button>
             </div>
         </form>
-        <a href="/order">Go Back</a>
+        <p>Already have an account? <a href="/user/login">Sign In <i class="fa fa-caret-right" aria-hidden="true"></i></a></p>
     </div>
 </div>
 
