--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,14 +25,15 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> Account <span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> Hello<% if(!currentUser){ %>. Sign in<% } else { %>, <%= currentUser.firstName %><% } %>
+                                <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <% if(!currentUser){ %>
-                                    <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/user/login">Login</a></li>
+                                    <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/user/login">Sign In</a></li>
                                     <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/user/register">Sign Up</a></li>
                                 <% } else { %>
-                                    <li><a><%= currentUser.username %></a></li>
-                                    <li><a href="/user/logout">Logout</a></li>
+                                    <li><a href="/user/:id">Profile</a></li>
+                                    <li><a href="/user/logout">Sign Out</a></li>
                                 <% } %>
                             </ul>
                         </li>
