--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,7 +32,7 @@
                                     <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/user/login">Sign In</a></li>
                                     <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/user/register">Sign Up</a></li>
                                 <% } else { %>
-                                    <li><a href="/user/:id">Profile</a></li>
+                                    <li><a href="/user/<%= currentUser._id %>">Profile</a></li>
                                     <li><a href="/user/logout">Sign Out</a></li>
                                 <% } %>
                             </ul>
