--- a/views/order/index.ejs
+++ b/views/order/index.ejs
@@ -1,26 +1,50 @@
 <% include ../partials/header %>
 
-<div class="row container-fluid">
-    <% category.forEach(function(category){ %>
-        <h1><%= category %></h1>
-    <div style="display:flex; flex-wrap: wrap;">
-        <% foods.forEach(function(food){ %>
-            <% if(food.type == category){ %>
-                <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <div class="food-item">
-                        <!-- <div  class="text-right;" style="float: right;">
-                        <img src="<%= food.image %>">
-                        </div> -->
-                        <h4><%= food.name %></h4>
-                        <p><%= food.description %></p>
-                        <p>$<%= food.price %>.00</p>
-                        <a href="/order/add-to-cart/<%= food._id %>" class="btn btn-xs btn-success">Add to cart</a>
+<div class="">
+    <div class="">
+        <img class="center-block d-flex" style="height:300px; width:100%" src="http://media-cdn.tripadvisor.com/media/photo-s/01/d7/df/b7/food-on-beach.jpg" alt="">
+    </div>
+    <div class="">
+        <div class="">
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+
+                        <a class="navbar-brand" href="/">FoodCategory</a>
                     </div>
                 </div>
-            <% } %>
-        <% }); %>
+            </nav>
+        </div>
+        <div class="row container-fluid">
+            <% category.forEach(function(category){ %>
+                <h1><%= category %></h1>
+                <div style="display:flex; flex-wrap: wrap;">
+                    <% foods.forEach(function(food){ %>
+                        <% if(food.type == category){ %>
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                                <div class="food-item">
+                                        <!-- <div  class="text-right;" style="float: right;">
+                                        <img src="<%= food.image %>">
+                                    </div> -->
+                                    <h4><%= food.name %></h4>
+                                    <p><%= food.description %></p>
+                                    <p>$<%= food.price %>.00</p>
+                                    <a href="/order/add-to-cart/<%= food._id %>" class="btn btn-xs btn-success">Add to cart</a>
+                                    <a href="/order/<%= food._id %>" class="btn btn-xs btn-success">Info</a>
+                                </div>
+                            </div>
+                        <% } %>
+                    <% }); %>
+                </div>
+            <% }); %>
+        </div>
     </div>
-    <% }); %>
 </div>
 
 
