--- a/views/order/show.ejs
+++ b/views/order/show.ejs
@@ -3,8 +3,9 @@
     <div class="thumbnail">
         <img class="img-responsive" src="<%= food.image %>">
         <div class="caption-full">
-            <h4 class="pull-right">$<%= food.price %>.00t</h4>
-            <h4><a><%=food.name%></a></h4>
+            <h4 class="pull-right">$<%= food.price %>.00</h4>
+            <h4><a><%= food.name %></a></h4>
+            <p><%= food.description %></p>
         </div>
     </div>
 </div>
