--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,7 +38,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="/order/checkout">
+                            <a href="/checkout">
                                 <i class="fa fa-shopping-bag" aria-hidden="true"></i>
                                 <% if(session.cart && session.cart.totalQty > 0){ %>
                                     <span class="badge"><%= session.cart.totalQty %></span>
