--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/stylesheets/main.css">
     </head>
     <body>
-        <nav class="navbar navbar-default navbar-fixed-top navbar-header">
+        <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </nav>
-
+        <div id="content">
         <div class="container">
         <% if(success && success.length > 0){ %>
             <div class="alert alert-success" role="alert">
