Fixed cart functions from checkout routes

--- a/views/order/checkout.ejs
+++ b/views/order/checkout.ejs
@@ -20,7 +20,7 @@
                                 <span>$<%= food.price %></span>
                             </div>
                             <div class="remove">
-                                <a href="/order/cart-remove/<%= food.item._id %>" style="text-decoration: none;">X</a>
+                                <a href="/checkout/cart-remove/<%= food.item._id %>" style="text-decoration: none;">X</a>
                             </div>
 
                         </div>
