--- a/views/order/index.ejs
+++ b/views/order/index.ejs
@@ -35,7 +35,7 @@
                                     <h4><%= food.name %></h4>
                                     <p><%= food.description %></p>
                                     <p>$<%= food.price %>.00</p>
-                                    <a href="/order/add-to-cart/<%= food._id %>" class="btn btn-xs btn-success">Add to cart</a>
+                                    <a href="/checkout/add-to-cart/<%= food._id %>" class="btn btn-xs btn-success">Add to cart</a>
                                     <a href="/order/<%= food._id %>" class="btn btn-xs btn-success">Info</a>
                                 </div>
                             </div>
