--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -20,7 +20,7 @@
                 <input class="form-control" type="text" name="lastName" placeholder="Last Name">
             </div>
             <div class="form-group">
-                <input class="form-control" type="text" name="phoneNumber" placeholder="403-000-0000">
+                <input class="form-control" type="tel" name="phoneNumber" placeholder="403-000-0000">
             </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-group">
