--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -24,3 +24,27 @@
 #content {
     margin-top: 51px;
 }
+
+.backgroundContainer {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: fixed;
+    overflow: hidden;
+    z-index: 1;
+    background-color: rgb(190, 220, 225);
+}
+
+.addressContainer {
+    margin-left: 50px;
+    margin-top: 90px;
+    z-index: 2;
+    background-color: #ffffff;
+}
+
+.orderContainer {
+    float: right;
+    z-index: 2;
+    padding-right: 0;
+    background-color: #ffffff;
+}
