--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -32,7 +32,7 @@
     position: fixed;
     overflow: hidden;
     z-index: 1;
-    background-color: rgb(190, 220, 225);
+    background-color: rgb(200, 220, 225);
 }
 
 .addressContainer {
@@ -46,5 +46,6 @@
     float: right;
     z-index: 2;
     padding-right: 0;
+    padding-bottom: 10px;
     background-color: #ffffff;
 }
