Adjusted order schema to include geolocation

--- a/views/order/checkout.ejs
+++ b/views/order/checkout.ejs
@@ -58,7 +58,7 @@
                 </ul>
                 <strong>Total: <%= totalPrice %></strong>
                 <hr>
-                <a href="/checkout" type="button" class="btn btn-success">Place order</a>
+                <button type="submit" class="btn btn-success">Place Order</button>
         </div>
     </form>
     </div>
