--- a/views/order/checkout.ejs
+++ b/views/order/checkout.ejs
@@ -7,60 +7,64 @@
 
         </div>
         <form class="" action="/checkout" method="POST">
-        <div class="addressContainer col-md-4">
-            <h3>Delivery Info</h4>
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input class="form-control" type="text" name="name" id="name" placeholder="Name">
-            </div>
-            <div class="form-group">
-                <label for="name">Delivery Time</label>
-                <div class="">
-                    <input class="" type="radio" name="deliveryTime" id="deliveryTime"> As soon as possible <!--(<%= %>)-->
-                    <a href="" style="float: right">Schedule</a>
+            <div class="addressContainer col-md-4">
+                <h3>Delivery Info</h4>
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input class="form-control" type="text" name="name" id="name" placeholder="Name">
                 </div>
-            </div>
-            <h4>Payment Info</h4>
-            <div class="form-group">
-                <select class="" name="paymentOption" id="paymentOption">
-                    <option value="cash">Cash</option>
-                    <option value="credit">Credit Card</option>
-                    <option value="debit">Debit Card</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <input class="form-control" type="text" name="note" id="note" placeholder="Add delivery instructions">
-            </div>
-        </div>
-        <div class="orderContainer col-md-4">
-            <ul class="list-group">
-                <% foods.forEach(function(food){ %>
-                    <li class="list-group-item">
-                        <!-- <input type="number" name="qty" value="<%= food.qty %>"> -->
-                        <div style="width: 500px;">
-                            <div style="float: left; width: 30px;">
-                                <select class="qty" name=""></select>
-                            </div>
-                            <div class="description" style="float: left; width: 100px;">
-                                <strong><%= food.item.name %></strong>
-
-                            </div>
-                            <div class="price" style="float: left; width: 100px;">
-                                <span>$<%= food.price %></span>
-                            </div>
-                            <div class="remove">
-                                <a href="/checkout/cart-remove/<%= food.item._id %>" style="text-decoration: none;">X</a>
-                            </div>
-
-                        </div>
-                    </li>
-                    <% }); %>
-                </ul>
-                <strong>Total: <%= totalPrice %></strong>
-                <hr>
+                <div class="form-group">
+                    <label for="phone">Phone  Number</label>
+                    <input class="form-control" type="tel" name="phone" id="phone" placeholder="">
+                </div>
+                <div class="form-group">
+                    <label for="name">Delivery Time</label>
+                    <div class="">
+                        <input class="" type="radio" name="deliveryTime" id="deliveryTime" checked> As soon as possible <!--(<%= %>)-->
+                        <a href="" style="float: right">Schedule</a>
+                    </div>
+                </div>
+                <h4>Payment Info</h4>
+                <div class="form-group">
+                    <select class="" name="paymentOption" id="paymentOption">
+                        <option value="cash">Cash</option>
+                        <option value="credit">Credit Card</option>
+                        <option value="debit">Debit Card</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="text" name="note" id="note" placeholder="Add delivery instructions">
+                </div>
                 <button type="submit" class="btn btn-success">Place Order</button>
-        </div>
-    </form>
+            </div>
+        </form>
+            <div class="orderContainer col-md-4">
+                <ul class="list-group">
+                    <% foods.forEach(function(food){ %>
+                        <li class="list-group-item">
+                            <!-- <input type="number" name="qty" value="<%= food.qty %>"> -->
+                            <div style="width: 500px;">
+                                <div style="float: left; width: 30px;">
+                                    <select class="qty" name=""></select>
+                                </div>
+                                <div class="description" style="float: left; width: 100px;">
+                                    <strong><%= food.item.name %></strong>
+
+                                </div>
+                                <div class="price" style="float: left; width: 100px;">
+                                    <span>$<%= food.price %></span>
+                                </div>
+                                <div class="remove">
+                                    <a href="/checkout/cart-remove/<%= food.item._id %>" style="text-decoration: none;">X</a>
+                                </div>
+
+                            </div>
+                        </li>
+                        <% }); %>
+                    </ul>
+                    <strong>Total: <%= totalPrice %></strong>
+                    <hr>
+            </div>
     </div>
 <% } else { %>
     <div class="row">
