--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header %>
 
 <h1>Landing Page</h1>
-<a href="/order" class="btn btn-lg btn-success">Order Now</a>
+<a href="/menu" class="btn btn-lg btn-success">Order Now</a>
 
 <% include ./partials/footer %>
