--- a/views/menu/index.ejs
+++ b/views/menu/index.ejs
@@ -32,7 +32,7 @@
                                     <p><%= food.description %></p>
                                     <p>$<%= food.price %>.00</p>
                                     <a href="/checkout/add-to-cart/<%= food._id %>" class="btn btn-xs btn-success">Add to cart</a>
-                                    <a href="/order/<%= food._id %>" class="btn btn-xs btn-success">Info</a>
+                                    <a href="/menu/<%= food._id %>" class="btn btn-xs btn-success">Info</a>
                                 </div>
                             </div>
                         <% } %>
