Cleaned up order history

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,6 +33,7 @@
                                     <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/user/register">Sign Up</a></li>
                                 <% } else { %>
                                     <li><a href="/user/<%= currentUser._id %>">Profile</a></li>
+                                    <li><a href="/orders">View Orders</a></li>
                                     <li><a href="/user/logout">Sign Out</a></li>
                                 <% } %>
                             </ul>
