--- a/views/orders/index.ejs
+++ b/views/orders/index.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %>
 
 <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-9 col-md-offset-3">
         <h1>Hello there</h1>
     </div>
 </div>
