--- a/views/orders/index.ejs
+++ b/views/orders/index.ejs
@@ -24,9 +24,9 @@
 
     function success(position){
         var lat = position.coords.latitude;
-        var long = position.coords.longitude;
+        var lng = position.coords.longitude;
         alert(lat);
-        alert(long);
+        alert(lng);
     }
 
     function failure(){
