Added notes for modal layout and tested google maps link

--- a/views/menu/index.ejs
+++ b/views/menu/index.ejs
@@ -48,12 +48,6 @@
 
 <% include ../partials/footer %>
 
-<!-- Wrap entire item in anchor tag -->
-<!--
-div
-Header: foodname
-p-tag: description x characters
-photo on the right
-
-
- -->
+<!-- Create a modal template
+use jquery to add html elements to modal template
+Make ID for each food that equals object's id. Then use EJS to access object's attributes  -->
