--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,6 +1,15 @@
 <% include ./partials/header %>
 
 <h1>Landing Page</h1>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg">Large modal</button>
+
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <h1>Test</h1>
+    </div>
+  </div>
+</div>
 <a href="/menu" class="btn btn-lg btn-success">Order Now</a>
 
 <% include ./partials/footer %>
