--- a/views/menu/index.ejs
+++ b/views/menu/index.ejs
@@ -24,7 +24,7 @@
                     <% foods.forEach(function(food){ %>
                         <% if(food.type == category){ %>
                             <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                                <div class="food-item" id="<%= food.name %>">
+                                <div class="food-item" data-toggle="modal" data-target="#<%= food._id %>">
                                         <!-- <div  class="text-right;" style="float: right;">
                                         <img src="<%= food.image %>">
                                     </div> -->
@@ -36,6 +36,25 @@
                                 </div>
                             </div>
                         <% } %>
+                        <div class="modal fade" id="<%= food._id %>" tabindex="-1" role="dialog" aria-labelledby="<%= food.name %>" aria-hidden="true">
+                          <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                              <div class="modal-body" style="padding: 0;">
+                                  <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                      <span aria-hidden="true">&times;</span>
+                                  </button> -->
+                                  <img src="<%= food.image %>" style="width: 100%;" alt="">
+                                  <div class="modal-text-content" style="padding: 15px;">
+                                      <p><%= food.description %></p>
+                                  </div>
+                              </div>
+                              <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
                     <% }); %>
                 </div>
             <% }); %>
