--- a/views/menu/index.ejs
+++ b/views/menu/index.ejs
@@ -31,8 +31,6 @@
                                     <h4><%= food.name %></h4>
                                     <p><%- food.description.length > 163 ? food.description.substring(0, 160) + "..." : food.description %></p>
                                     <p>$<%= food.price %>.00</p>
-                                    <a href="/checkout/add-to-cart/<%= food._id %>" class="btn btn-xs btn-success">Add to cart</a>
-                                    <a href="/menu/<%= food._id %>" class="btn btn-xs btn-success">Info</a>
                                 </div>
                             </div>
                         <% } %>
@@ -43,14 +41,14 @@
                                   <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                       <span aria-hidden="true">&times;</span>
                                   </button> -->
-                                  <img src="<%= food.image %>" style="width: 100%;" alt="">
+                                  <img class="modal-img" src="<%= food.image %>" style="width: 100%;">
                                   <div class="modal-text-content" style="padding: 15px;">
                                       <p><%= food.description %></p>
                                   </div>
                               </div>
                               <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
+                                <a href="/checkout/add-to-cart/<%= food._id %>" class="btn btn-primary">Add to cart</a>
                               </div>
                             </div>
                           </div>
