--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -47,6 +47,27 @@
     float: right;
     z-index: 2;
     padding-right: 0;
+    padding-left: 0;
     padding-bottom: 10px;
     background-color: #ffffff;
+}
+
+.checkout-row{
+    margin: 10px;
+    height: 50px;
+}
+
+.checkout-item{
+    display: inline-block;
+    flex: right;
+    padding: 8px;
+    font-size: 16px;
+}
+
+.checkout-item a{
+    color: #428bca;
+}
+
+.checkout-item-name{
+    width: 200px;
 }
