Cleaned up styling on checkout page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -41,6 +41,7 @@
     margin-top: 90px;
     z-index: 2;
     background-color: #ffffff;
+    position: fixed;
 }
 
 .orderContainer {
@@ -52,15 +53,22 @@
     background-color: #ffffff;
 }
 
+.orderContainer button{
+    display: block;
+    margin: 0 auto 6px auto;
+    width: 90%;
+    height: 50px;
+}
+
 .checkout-row{
     margin: 10px;
-    height: 50px;
+    height: 55px;
 }
 
 .checkout-item{
     display: inline-block;
     flex: right;
-    padding: 8px;
+    padding: 0 8px;
     font-size: 16px;
 }
 
@@ -68,6 +76,24 @@
     color: #428bca;
 }
 
+.checkout-item-qty{
+    width: 82px;
+}
+
 .checkout-item-name{
-    width: 200px;
+    width: 300px;
+}
+
+.checkout-item-price{
+    width: 70px;
+}
+
+.checkout-item-remove{
+    width: 70px;
+    padding-left: 95px;
+}
+
+.checkout-total{
+    font-size: 18px;
+    padding: 0 15px;
 }
