--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -58,11 +58,13 @@
     margin: 0 auto 6px auto;
     width: 90%;
     height: 50px;
+    font-size: 18px;
 }
 
 .checkout-row{
     margin: 10px;
     height: 55px;
+    border-bottom: 1px solid #eeeeee;
 }
 
 .checkout-item{
@@ -74,6 +76,7 @@
 
 .checkout-item a{
     color: #428bca;
+    text-decoration: none;
 }
 
 .checkout-item-qty{
@@ -95,5 +98,19 @@
 
 .checkout-total{
     font-size: 18px;
-    padding: 0 15px;
+    padding: 10px 15px 0 15px;
+}
+
+.checkout-total p{
+    margin: 0;
+}
+
+
+.checkout-total strong{
+    margin-top: 10000px;
+}
+
+.checkout-price{
+    text-align: right;
+    float: right;
 }
