Added scrollspy to menu nav

--- a/views/menu/index.ejs
+++ b/views/menu/index.ejs
@@ -63,8 +63,11 @@
     </div>
 </div>
 
-
-
+<script>
+    $(document).ready(function(){
+        $('body').scrollspy({target: ".navbar-stick", offset: 125});
+    });
+</script>
 
 <% include ../partials/footer %>
 
