Refactored food schema and styling of orders page

--- a/views/orders/index.ejs
+++ b/views/orders/index.ejs
@@ -3,6 +3,34 @@
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
         <% orders.forEach(function(order){ %>
+            <div class="order-container">
+                <div class="customer-row">
+                    <div class="customer-info delivery-time">
+                        <!-- <p><%= order.deliveryTime %></p> -->
+                        <p>March 17th 2018, 1:11:26 pm</p>
+                    </div>
+                    <div class="customer-info customer-name">
+                        <p><%= order.name %></p>
+                    </div>
+                    <div class="customer-info customer-phone">
+                        <p><%= order.phone %></p>
+                    </div>
+                </div>
+                    <% for(var id in order.cart.items){ %>
+                        <p><%= order.cart.items[id].item.name %></p>
+                        <p><%= order.cart.items[id].qty %></p>
+                        <p><%= (order.cart.items[id].price * order.cart.items[id].qty).toFixed(2) %></p>
+                    <% } %>
+                    <p><%= order.cart.totalPrice.toFixed(2) %></p>
+                <a href="https://www.google.com/maps/?q=<%= order.lat %>, <%= order.lng %>" target="_blank" class="btn btn-lg btn-success"></a>
+            </div>
+        <% }); %>
+    </div>
+</div>
+
+<!-- <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+        <% orders.forEach(function(order){ %>
             <div class="thumbnail" style="margin-top: 20px; ">
                 <div class="subdiv">
                     <h1><%= order.name %></h1>
@@ -10,12 +38,15 @@
                     <p><%= order.deliveryTime %></p>
                     <% for(var id in order.cart.items){ %>
                         <p><%= order.cart.items[id].item.name %></p>
+                        <p><%= order.cart.items[id].qty %></p>
+                        <p><%= (order.cart.items[id].price * order.cart.items[id].qty).toFixed(2) %></p>
                     <% } %>
+                    <p><%= order.cart.totalPrice.toFixed(2) %></p>
                 </div>
                 <a href="https://www.google.com/maps/?q=<%= order.lat %>, <%= order.lng %>" target="_blank" class="btn btn-lg btn-success"></a>
             </div>
         <% }); %>
     </div>
-</div>
+</div> -->
 
 <% include ../partials/footer %>
