--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="/stylesheets/main.css">
+        <link rel="stylesheet" href="/stylesheets/checkout.css">
+        <link rel="stylesheet" href="/stylesheets/order.css">
     </head>
     <body>
         <nav class="navbar navbar-default navbar-fixed-top">
